src/test/deca/syntax/invalid/resultats/test37_class_decl-synt.res
./src/test/deca/syntax/invalid/test37_class_decl.deca:15:0: no viable alternative at input 'private'
